2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Doxyfile.in: Exclude internal symbols from documentation.

2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Doxyflile.in: Fix include paths in documentation.

2013-04-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/util/component_precise_outline.hh: Check if sites are
	part of the image.

2013-04-12  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Remove duplicate '/' in path.

2013-04-12  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Fix path to documentation.

2013-04-12  Guillaume Lazzara  <z@lrde.epita.fr>

	Use relative paths in documentation.

	* doc/Doxyfile.in,
	* doc/Makefile.am: Here.

2013-04-10  Guillaume Lazzara  <z@lrde.epita.fr>

	* doc/Makefile.am: Fix permissions on documentation files.

2013-04-10  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix path to other documentations.

	* doc/Doxyfile.in,
	* doc/Makefile.am: Here.

2013-04-09  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/primitive/extract/Makefile.am: Add more files in
	EXTRA_DIST.

2013-04-09  Guillaume Lazzara  <z@lrde.epita.fr>

	* headers.mk,
	* tests/unit-tests.mk: Regen.

2013-04-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/filter/objects_in_borders.hh: New.

2013-04-04  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix binarization tests.

	* tests/Makefile.am: Add more files in EXTRA_DIST.
	* tests/binarization/niblack.cc,
	* tests/binarization/wolf.cc: Load reference file instead of
	saving it.

2013-04-02  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix component_set comparison.

	* scribo/core/component_info.hh,
	* scribo/core/component_set.hh: Here.

2013-04-02  Guillaume Lazzara  <lazzara@caroussel.lrde.epita.fr>

	Improve time logging in Scribo.

	* scribo/debug/logger.hh: Use a stack to handle several
	simultaneous logs.

	* scribo/binarization/sauvola_ms.hh: Fix an invalid time stop.

	* scribo/binarization/internal/local_threshold_core.hh,
	* src/binarization/sauvola.cc,